# toucan-tournament

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  ignore_words.txt  index.html  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml
doc/: Makefile
doc/source/: conf.py  resolution.rst  task.rst
doc/source/_autoapi_templates/: index.rst
examples/: example_script.py
src/mvp/calculator/: __init__.py  discipline.py  errors.py  players.py  tournament.py
src/toucan/mvp/calculator/: __init__.py  discipline.py  errors.py  players.py  tournament.py
tests/: test_discipline.py  test_errors.py  test_players.py  test_tournament.py
tests/data/tournament/: match1.txt
tests/data/tournament_error1/: match1.txt  match2.txt
version/: index.html
version/dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  resolution.html  search.html  searchindex.js  task.html
version/dev/_sources/: index.rst.txt  resolution.rst.txt
version/dev/_sources/autoapi/: index.rst.txt
version/dev/_sources/autoapi/toucan/mvp/calculator/: index.rst.txt
version/dev/_sources/autoapi/toucan/mvp/calculator/discipline/: index.rst.txt
version/dev/_sources/autoapi/toucan/mvp/calculator/errors/: index.rst.txt
version/dev/_sources/autoapi/toucan/mvp/calculator/players/: index.rst.txt
version/dev/_sources/autoapi/toucan/mvp/calculator/tournament/: index.rst.txt
version/dev/_static/: README.md
version/dev/autoapi/: index.html
version/dev/autoapi/toucan/mvp/calculator/: index.html
version/dev/autoapi/toucan/mvp/calculator/discipline/: index.html
version/dev/autoapi/toucan/mvp/calculator/errors/: index.html
version/dev/autoapi/toucan/mvp/calculator/players/: index.html
version/dev/autoapi/toucan/mvp/calculator/tournament/: index.html
