[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mvp-calculator"
version = "0.1.dev0"
description = "A python library for computing the MVP of the Toucan tournament."
readme = "README.md"
requires-python = ">=3.7,<4"
authors = [{name = "Roberto Pastor Muela", email = "roberpm1995@gmail.com"}]
maintainers = [{name = "Roberto Pastor Muela", email = "roberpm1995@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
]

[project.optional-dependencies]
tests = [
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
    "pytest-pyvista==0.1.7",
]

[tool.flit.module]
name = "mvp.calculator"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["src", "tests"]

[tool.coverage.run]
source = ["mvp.calculator"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=mvp.calculator --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term"
testpaths = [
    "tests",
]
