[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "toucan-mvp-calculator"
version = "0.1.dev0"
description = "A python library for computing the MVP of the Toucan tournament."
readme = "README.rst"
requires-python = ">=3.8,<4"
authors = [{name = "Roberto Pastor Muela", email = "roberpm1995@gmail.com"}]
maintainers = [{name = "Roberto Pastor Muela", email = "roberpm1995@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
]

[project.optional-dependencies]
tests = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
]
doc = [
    "pydata-sphinx-theme==0.15.3",
    "numpydoc==1.7.0",
    "Sphinx==7.3.7",
    "sphinx-autoapi==3.1.1",
    "Sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "toucan.mvp.calculator"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["toucan.mvp.calculator"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=toucan.mvp.calculator --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term"
testpaths = [
    "tests",
]
